# spotify-utility

./: .gitignore  pyproject.toml
config/: logging.yml
src/: __init__.py  spotify_connector.py
