[tool.poetry]
name = "music-explorer-project"
version = "0.1.0"
description = ""
authors = ["Jolan <jolan11.dubois@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ipykernel = "^6.29.5"
requests = "^2.32.3"
spotipy = "^2.24.0"
pandas = "^2.2.3"
python-json-logger = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
